--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "tradegecko-fonts",
+  "name": "@tradegecko/fonts",
   "version": "0.0.0",
-  "description": "Awesome tradegecko fonts",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "Awesome custom fonts for tradegecko apps",
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/tradegecko/tradegecko-fonts.git"
   },
   "keywords": [
     "tradegecko-fonts",
     "custom-fonts",
     "fonts"
   ],
-  "author": "",
   "license": "MIT"
 }
